testsuite/tests/deriving/should_fail/Roles11.hs
{-# LANGUAGE GADTs, RoleAnnotations #-}

module Roles11 where

data T2 a@R where
  K2 :: T2 Int

